third_party/rust/chromium_crates_io/vendor/zerocopy-0.8.23/tests/ui-msrv/diagnostic-not-implemented-from-zeros.stderr
error[E0277]: the trait bound `NotZerocopy: FromZeros` is not satisfied
  --> tests/ui-msrv/diagnostic-not-implemented-from-zeros.rs:18:24
   |
18 |     takes_from_zeros::<NotZerocopy>();
   |                        ^^^^^^^^^^^ the trait `FromZeros` is not implemented for `NotZerocopy`
   |
note: required by a bound in `takes_from_zeros`
  --> tests/ui-msrv/diagnostic-not-implemented-from-zeros.rs:21:24
   |
21 | fn takes_from_zeros<T: FromZeros>() {}
   |                        ^^^^^^^^^ required by this bound in `takes_from_zeros`
